--- a/BloodDonor/EventViewController.xib
+++ b/BloodDonor/EventViewController.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="15780762"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="609409476"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,6 +58,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{0, 2}, {320, 434}}</string>
 						<reference key="NSSuperview" ref="15780762"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="470096121">
 							<int key="NSColorSpace">3</int>
@@ -69,6 +71,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 436}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="866696245"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -88,6 +91,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 109}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="394241882"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -102,6 +106,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 57}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="991099006"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -116,6 +121,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 29}, {89, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="719622052"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -147,6 +153,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 68}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="960879756"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="470096121"/>
@@ -179,6 +186,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{103, 33}, {18, 14}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="12001870"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -193,6 +201,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{235, 31}, {75, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="474564705"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -225,6 +234,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 145}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="978279854"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -236,6 +246,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 251}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="510602005"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -247,6 +258,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{294, 122}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="499674921"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -261,6 +273,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{294, 228}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="376332814"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -275,6 +288,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 119}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="604681860"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -305,6 +319,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 177}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="396948490"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="470096121"/>
@@ -330,6 +345,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 151}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="127348168"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="470096121"/>
@@ -355,6 +371,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{235, 177}, {75, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="420652787"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -384,6 +401,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{235, 151}, {75, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="365247918"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -410,6 +428,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 226}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="744261374"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -433,6 +452,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 262}, {301, 160}}</string>
 						<reference key="NSSuperview" ref="996599100"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="470096121"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -458,6 +478,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 414}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="693311275"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="470096121"/>
@@ -472,6 +493,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 140}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="973838097"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -486,6 +508,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 57}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="189078176"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -497,6 +520,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 25}, {135, 29}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="620044056"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -521,6 +545,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 99}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1042163697"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="470096121"/>
@@ -546,6 +571,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 69}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="93884808"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="470096121"/>
@@ -571,6 +597,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{148, 35}, {10, 13}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="545036539"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -585,6 +612,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{235, 31}, {75, 21}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="188779561"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -611,6 +639,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 175}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="154430363"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -622,6 +651,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{294, 152}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="370412797"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -633,6 +663,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 150}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1001935875"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -656,6 +687,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 186}, {301, 160}}</string>
 						<reference key="NSSuperview" ref="20720411"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="470096121"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -681,6 +713,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 338}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="832605625"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="470096121"/>
@@ -1067,13 +1100,103 @@
 			<nil key="sourceID"/>
 			<int key="maxID">98</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">EventViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">backButtonClick:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">backButtonClick:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">backButtonClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bloodDonateView">UIView</string>
+						<string key="eventBloodDonateCommentLabel">SLabel</string>
+						<string key="eventBloodDonateDateButton">UIButton</string>
+						<string key="eventBloodDonateLocationLabel">UILabel</string>
+						<string key="eventBloodDonateTypeLabel">UILabel</string>
+						<string key="eventTestCommentLabel">SLabel</string>
+						<string key="eventTestDateButton">UIButton</string>
+						<string key="eventTestLocationLabel">UILabel</string>
+						<string key="eventTestReminderDateButton">UIButton</string>
+						<string key="eventTestReminderKnowButton">UIButton</string>
+						<string key="scrollView">UIScrollView</string>
+						<string key="testView">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bloodDonateView">
+							<string key="name">bloodDonateView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventBloodDonateCommentLabel">
+							<string key="name">eventBloodDonateCommentLabel</string>
+							<string key="candidateClassName">SLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventBloodDonateDateButton">
+							<string key="name">eventBloodDonateDateButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventBloodDonateLocationLabel">
+							<string key="name">eventBloodDonateLocationLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventBloodDonateTypeLabel">
+							<string key="name">eventBloodDonateTypeLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventTestCommentLabel">
+							<string key="name">eventTestCommentLabel</string>
+							<string key="candidateClassName">SLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventTestDateButton">
+							<string key="name">eventTestDateButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventTestLocationLabel">
+							<string key="name">eventTestLocationLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventTestReminderDateButton">
+							<string key="name">eventTestReminderDateButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="eventTestReminderKnowButton">
+							<string key="name">eventTestReminderKnowButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="testView">
+							<string key="name">testView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/EventViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SLabel.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
-		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
-			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1536" key="NS.object.0"/>
-		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
